--- a/assets/css/copyright.css
+++ b/assets/css/copyright.css
@@ -1,13 +1,15 @@
 div.copyright_label_wrapper{
   bottom: 0;
-  width:100%;
   margin: auto;
+  width:30em;
   text-align: center;
   background-color: white;
+  padding: 1em;
 }
 
 div.copyright_label_wrapper p{
   font-family: Glegoo;
-  color: #ced8e8;
-  font-size: 1.1vw;
+  color: #2f416a;
+  opacity: 0.2;
+  font-size: 1.7em;
 }
