--- a/assets/css/menubar.css
+++ b/assets/css/menubar.css
@@ -1,130 +1,88 @@
 @font-face { font-family: Monoton; src: url('assets/fonts/Monoton/Monoton-Regular.ttf'); } 
 @font-face { font-family: Glegoo; src: url('assets/fonts/Glegoo/Glegoo-Regular.ttf'); } 
 
-/* Remove margins and padding from the list, and add a background color */
-ul.leftnav {
-    text-align: center;
-    list-style-type: none;
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.2) 25%, rgba(255, 255, 255, 0.2) 75%, rgba(255, 255, 255, 0) 100%);
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1), inset 0 0 1px rgba(255, 255, 255, 0.6);
-    left: 0;
-    top: 0;
-    position: fixed;
-    overflow-x: hidden;
-    padding: 40px 5px;
-    height:100%;
-    margin: auto;
-    width: 5%;
+div.nav_container{
+  width: 100%;
+  position: fixed;
+  background-color: rgba(255,255,255,0.8);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2), inset 0 0 5px rgba(255, 255, 255, 0.1);
+  top: 0;
+  left:0;
+}
+ul.menunav{
+  list-style-type: none;
 }
 
+.topnav{
+  top: 0;
+  z-index: -1;
+}
 
-/* Style the links inside the list items */
-ul.leftnav li a {
+.topnav .icon{
+  display: none;
+}
+
+@media screen and (max-device-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
     display: inline-block;
-    color: #2f416a;
-    padding: 25px 0px;
-    text-decoration: none;
-    font-size: 0.8vw;
-    font-family: Glegoo;
+  }
+}
+
+@media screen and (max-device-width: 600px) {
+  .topnav.responsive{
+  }
+  .topnav.responsive a.icon {
+    position: absolute;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    margin: auto;
+    text-align: center;
+  }
+}
+
+@media (min-width: 1000px) {
+      div.topnav a{
+      font-size: 10px;
+    } 
+}
+
+div.topnav a{
+  font-family: Glegoo;
+  font-size: 1.4em;
+  color: #2f416a;
+  text-decoration: none;
+  margin-top: 0.4em;
+  margin-left: 1.5em;
+  float: left;
+}
+
+div.nav_bar a:active{
+  color: #97a0b5;
 }
 
 /* Change colour on hover */
-ul.leftnav li a:hover {color: #97a0b5;}
-
-/* Screen width styling for nav bar buttons */
-@media screen and (max-width: 600px) {
-ul.leftnav li a{
-  top: 30;
-  padding: 15px 0px;
-  overflow-x: hidden;
-}
-ul.leftnav{
-  padding: 0px 0px;
-}
+ul.menunav a:hover{
+  color: #97a0b5;
 }
 
-/* Screen height styling for nav bar buttons */
-@media screen and (max-height: 300px) {
-ul.leftnav li a{
-  left: 0;
-  top: 20;
-  padding: 5px 0px;
-  overflow-x: hidden;
-}
-ul.leftnav{
-  padding: 5px 0px;
-}
 div.social_bar{
-  margin-top: 0px;
-}
-}
-
-/* Screen height styling for social buttons */
-@media screen and (max-height: 300px) {
-  div.social_bar li img{
-    left: 0;
-    padding: 5px 0px;
-    overflow-x: hidden;
-  }
-  div.social_bar li{
-    padding: 0px 0px;
-  }
+  margin-right: 2em;
 }
 
-/* Screen width styling for social buttons */
-@media screen and (max-width: 600px) {
-div.social_bar li img{
-  left: 0;
-  padding: 5px 0px;
-  overflow-x: hidden;
-}
-div.social_bar li{
-  padding: 0px 0px;
-}
-}
-
-/* Styling for social buttons */
-div.social_bar{
-  margin-top: 30px;
-  padding: 50px;
-  left:0;
-}
-
-/* Styling for Social buttons */
-div.social_bar {
-  padding: 0px;
-  margin-top: 40px;
-  overflow: scroll;
-  overflow-x: hidden;
-}
-
-/* Remove scrollbars */
-::-webkit-scrollbar {
-    width: 0px;  /* remove scrollbar space */
-    background: transparent;  /* optional: just make scrollbar invisible */
+div.social_bar li a{
+  float: right;
+  margin-right: 0.5em;
+  margin
 }
 
 div.social_bar li img{
-  width: 45%;
+  width: 3.5em;
+  border-radius: 50%;
 }
 
-/* Separate end of nav menu and start of social buttons */
-li.last_button img{
-  margin-bottom: 30px;
-}
-
-#fb_icon:hover{
-  opacity: 0.5;
-}
-
-#twitter_icon:hover{
-  opacity: 0.5;
-}
-
-#linkedin_icon:hover{
-  opacity: 0.5;
-}
-
-#instagram_icon:hover{
+#social_icon:hover{
   opacity: 0.5;
 }
