--- a/assets/css/menubar.css
+++ b/assets/css/menubar.css
@@ -31,23 +31,29 @@ div.topnav a{
     padding-right: 0.5em;
     background-color: rgba(255,255,255,0.8);
   }
+  div.topnav a{
+    margin-top: 0.22em;
+  }
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
     display: block;
   }
   .topnav.responsive a.icon {
     position: relative;
+    margin-top: 0.18em;
+    margin-bottom: 0.1em;
   }
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: center;
     margin: auto;
+    margin-bottom: 0.2em;
     color: #2f416a;
   }
   div.social_div{
     padding-right: 1.6em;
-    margin-top: 1.15em;
+    margin-top: 1.5em;
   }
 }
 
@@ -56,7 +62,11 @@ div.topnav a{
     padding-left: 3em;
   }
   div.topnav a{
-    margin-top: 0.8em;
+    margin-top: 1em;
+  }
+  div.social_div{
+    padding-right: 1.6em;
+    margin-top: 0.25em;
   }
 }
 
@@ -72,9 +82,10 @@ div.topnav a{
 
 div.topnav a{
   font-family: Roboto-Light;
-  font-size: 1.45em;
+  font-size: 1.65em;
   color: #FFFFFF;
   text-decoration: none;
+  margin-top: 0.8em;
   margin-left: 1.5em;
   float: left;
 }
@@ -85,7 +96,7 @@ ul.menunav a:hover{
 }
 
 div.social_div{
-  margin-right: 2.2em;
+  margin-right: 1.2em;
 }
 
 .social_div{
@@ -95,33 +106,35 @@ div.social_div{
 
 #social_icon{
   float: right;
-  margin-right: 0.9em;
 }
 
 
 /*Social buttons */
 
+a span{
+  padding: 2em;
+  margin-right: 1.8em;
+  margin-top: 0;
+}
+
 a#fb_icon span{
     background-image: url('../images/facebook.png');
     background-repeat: no-repeat;
-    background-size: 4.5em;
-    padding: 2em;
+    background-size: 5.4em;
     background-position: center;
 }
 
 a#twitter_icon span{
     background-image: url('../images/twitter.png');
     background-repeat: no-repeat;
-    background-size: 4.5em;
-    padding: 2em;
+    background-size: 5.4em;
     background-position: center;
 }
 
 a#linkedin_icon span{
     background-image: url('../images/linkedin.png');
     background-repeat: no-repeat;
-    background-size: 4.5em;
-    padding: 2em;
+    background-size: 5.4em;
     background-position: center;
 }
 
