--- a/assets/css/menubar.css
+++ b/assets/css/menubar.css
@@ -93,6 +93,7 @@ div.topnav a{
 /* Change colour on hover */
 ul.menunav a:hover{
   color: #2f416a;
+  text-shadow: 2px 2px 10px #FFFFFF, 1px 1px 2px #2f416a;
 }
 
 div.social_div{
@@ -108,7 +109,6 @@ div.social_div{
   float: right;
 }
 
-
 /*Social buttons */
 
 a span{
@@ -122,6 +122,7 @@ a#fb_icon span{
     background-repeat: no-repeat;
     background-size: 5.4em;
     background-position: center;
+    
 }
 
 a#twitter_icon span{
